<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_project_introduction"
            android:icon="@drawable/ic_nav_project_introduction"
            android:title="@string/project_introduction" />

        <item
            android:id="@+id/nav_update_description"
            android:icon="@drawable/ic_nav_update_description"
            android:title="@string/update_description" />

        <item
            android:id="@+id/nav_scan_code"
            android:icon="@drawable/ic_nav_scan_code"
            android:title="@string/scan_code" />

        <item
            android:id="@+id/nav_problem_feedback"
            android:icon="@drawable/ic_nav_problem_feedback"
            android:title="@string/problem_feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_nav_donate"
            android:title="@string/donate" />
    </group>
</menu>