<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_horizontal"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_1" />

        <android.support.design.widget.TabLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:background="@color/color_2">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_triangle"
                android:text="@string/tab_1" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_rectangle"
                android:text="@string/tab_2" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_star"
                android:text="@string/tab_3" />
        </android.support.design.widget.TabLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/color_2"
            app:tabMode="fixed" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_1"
            app:tabBackground="@color/color_2"
            app:tabMode="scrollable" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_1"
            app:tabIndicatorColor="@color/color_4"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/color_4"
            app:tabTextAppearance="@style/tab_layout"
            app:tabTextColor="@color/text_color_primary" />

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/color_3" />
    </LinearLayout>
</LinearLayout>